syntax = "proto3";
package serialization;

message RenderSettings {
  double width = 1;
  double height = 2;
  double padding = 3;
  double line_width = 4;
  double stop_radius = 5;
  int32 bus_label_font_size = 6;

  double bus_label_offset_1 = 7;
  double bus_label_offset_2 = 8;
  int32 stop_label_font_size = 9;
  double stop_label_offset_1 = 10;
  double stop_label_offset_2 = 11;
  string underlayer_color = 12;
  double underlayer_width = 13;
  repeated string color_palette = 14;
}

message Map_renderer {
    RenderSettings settings = 1;
}